# Protorch

./: .gitignore  CMakeLists.txt
cmake/: ProTorchConfig.cmake.in  SetupLLVM.cmake
include/: config.h.in  protorch.hpp
python/: config.yaml  dataset.py  ddp_train.py  get_func_embed.py  paths.py  requirements.txt  train.py
python/GraMI/: loss.py  metrics.py  model.py
python/models/HeteroSAGE/: model.py
python/utils/: common.py  digit_embeddings.py
python/utils/digit_embeddings/: DigitEmbedding.py
scripts/: setup-conda.sh  setup-lassen.sh
src/: config.h  protorch.cpp
tests/: CMakeLists.txt  test-getEmbeds.cpp
tests/data/: fib.ll
